✨add route to update reaction
